# llm-tools

./: .env  .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
src/: app.rs  components.rs  fileserv.rs  layouts.rs  lib.rs  main.rs  pages.rs
src/components/: page_title.rs
src/layouts/: main_layout.rs  side_layout.rs
src/pages/: calculator.rs  chat.rs  draw.rs  error.rs  home.rs
style/: main.css  theme.scss
